# azure-storage-cpp

./: .gitattributes  .gitignore  .gitmodules  BreakingChanges.txt  CONTRIBUTING.md  Changelog.txt  Dockerfile  Doxyfile  Microsoft.Azure.Storage.CPP.nuspec  Microsoft.Azure.Storage.CPP.v120.nuspec  Microsoft.Azure.Storage.CPP.v120.targets  Microsoft.Azure.Storage.CPP.v140.nuspec  Microsoft.Azure.Storage.CPP.v140.targets  Microsoft.WindowsAzure.Storage.autopkg  Microsoft.WindowsAzure.Storage.sln  Microsoft.WindowsAzure.Storage.v120.sln  Microsoft.WindowsAzure.Storage.v140.sln  Microsoft.WindowsAzure.Storage.v141.sln  README.md  annotated.html  auth_8h_source.html  azure-pipelines.yml  blob_8h_source.html  build.proj  build.sln  classazure_1_1storage_1_1__operation__context-members.html  classazure_1_1storage_1_1__operation__context.html  classazure_1_1storage_1_1access__condition-members.html  classazure_1_1storage_1_1access__condition.html  classazure_1_1storage_1_1account__properties-members.html  classazure_1_1storage_1_1account__properties.html  classazure_1_1storage_1_1account__shared__access__policy-members.html  classazure_1_1storage_1_1account__shared__access__policy.html  classazure_1_1storage_1_1basic__common__retry__policy-members.html  classazure_1_1storage_1_1basic__common__retry__policy.html  classazure_1_1storage_1_1basic__exponential__retry__policy-members.html  classazure_1_1storage_1_1basic__exponential__retry__policy.html  classazure_1_1storage_1_1basic__linear__retry__policy-members.html  classazure_1_1storage_1_1basic__linear__retry__policy.html  classazure_1_1storage_1_1basic__no__retry__policy-members.html  (+376 more)
Microsoft.WindowsAzure.Storage/: CMakeLists.txt  Microsoft.WindowsAzure.Storage.v120.vcxproj  Microsoft.WindowsAzure.Storage.v120.vcxproj.filters  Microsoft.WindowsAzure.Storage.v140.vcxproj  Microsoft.WindowsAzure.Storage.v140.vcxproj.filters  Microsoft.WindowsAzure.Storage.v141.vcxproj  Microsoft.WindowsAzure.Storage.v141.vcxproj.filters  Microsoft.WindowsAzure.Storage.vcxproj  Microsoft.WindowsAzure.Storage.vcxproj.filters  packages.config  version.rc
Microsoft.WindowsAzure.Storage/cmake/Modules/: FindCasablanca.cmake  FindGlib.cmake  FindGlibmm.cmake  FindLibXML++.cmake  FindLibXML2.cmake  FindSigC++.cmake  FindUUID.cmake  FindUnitTest++.cmake  LibFindMacros.cmake
Microsoft.WindowsAzure.Storage/includes/: stdafx.h  targetver.h
Microsoft.WindowsAzure.Storage/includes/was/: auth.h  blob.h  common.h  core.h  crc64.h  error_code_strings.h  file.h  queue.h  retry_policies.h  service_client.h  storage_account.h  table.h
Microsoft.WindowsAzure.Storage/includes/wascore/: async_semaphore.h  basic_types.h  blobstreams.h  constants.h  executor.h  filestream.h  hash_windows.h  hashing.h  logging.h  protocol.h  protocol_json.h  protocol_xml.h  resources.h  streambuf.h  streams.h  timer_handler.h  util.h  xml_wrapper.h  xmlhelpers.h  xmlstream.h
Microsoft.WindowsAzure.Storage/samples/: BlobsGettingStarted.cpp  BlobsPerformanceBenchmark.cpp  CMakeLists.txt  FilesGettingStarted.cpp  FilesProperties.cpp  JsonPayloadFormat.cpp  Microsoft.WindowsAzure.Storage.Samples.sln  Microsoft.WindowsAzure.Storage.Samples.v120.sln  Microsoft.WindowsAzure.Storage.Samples.v140.sln  Microsoft.WindowsAzure.Storage.Samples.v140.vcxproj  Microsoft.WindowsAzure.Storage.Samples.v140.vcxproj.filters  Microsoft.WindowsAzure.Storage.Samples.v141.vcxproj  Microsoft.WindowsAzure.Storage.Samples.v141.vcxproj.filters  NativeClientLibraryDemo1.cpp  NativeClientLibraryDemo2.cpp  OAuthGettingStarted.cpp  QueuesGettingStarted.cpp  TablesGettingStarted.cpp  main.cpp  nuget.config  samples_common.h
Microsoft.WindowsAzure.Storage/samples/BlobsGettingStarted/: Application.cpp  CMakeLists.txt  Microsoft.WindowsAzure.Storage.BlobsGettingStarted.v120.vcxproj  Microsoft.WindowsAzure.Storage.BlobsGettingStarted.v120.vcxproj.filters  Microsoft.WindowsAzure.Storage.BlobsGettingStarted.v140.vcxproj  packages.config  stdafx.h  (+2 more)
Microsoft.WindowsAzure.Storage/src/: CMakeLists.txt  Makefile  async_semaphore.cpp  authentication.cpp  basic_types.cpp  blob_request_factory.cpp  blob_response_parsers.cpp  cloud_append_blob.cpp  cloud_blob.cpp  cloud_blob_client.cpp  cloud_blob_container.cpp  cloud_blob_directory.cpp  cloud_blob_istreambuf.cpp  cloud_blob_ostreambuf.cpp  cloud_blob_shared.cpp  cloud_block_blob.cpp  cloud_client.cpp  cloud_common.cpp  cloud_core.cpp  cloud_file.cpp  cloud_file_client.cpp  cloud_file_directory.cpp  cloud_file_ostreambuf.cpp  cloud_file_share.cpp  cloud_page_blob.cpp  cloud_queue.cpp  cloud_queue_client.cpp  cloud_queue_message.cpp  cloud_storage_account.cpp  cloud_table.cpp  cloud_table_client.cpp  constants.cpp  crc64.cpp  entity_property.cpp  executor.cpp  file_request_factory.cpp  file_response_parsers.cpp  hash_windows.cpp  hashing.cpp  logging.cpp  (+23 more)
Microsoft.WindowsAzure.Storage/tests/: CMakeLists.txt  Microsoft.WindowsAzure.Storage.UnitTests.v120.vcxproj  Microsoft.WindowsAzure.Storage.UnitTests.v120.vcxproj.filters  Microsoft.WindowsAzure.Storage.UnitTests.v140.vcxproj  Microsoft.WindowsAzure.Storage.UnitTests.v140.vcxproj.filters  Microsoft.WindowsAzure.Storage.UnitTests.v141.vcxproj  Microsoft.WindowsAzure.Storage.UnitTests.v141.vcxproj.filters  Microsoft.WindowsAzure.Storage.UnitTests.vcxproj  Microsoft.WindowsAzure.Storage.UnitTests.vcxproj.filters  README.md  blob_lease_test.cpp  blob_streams_test.cpp  blob_test_base.cpp  blob_test_base.h  blob_versioning_test.cpp  check_macros.h  checksum_test.cpp  cloud_append_blob_test.cpp  cloud_blob_client_test.cpp  cloud_blob_container_test.cpp  cloud_blob_directory_test.cpp  cloud_blob_test.cpp  cloud_block_blob_test.cpp  cloud_file_client_test.cpp  cloud_file_directory_test.cpp  cloud_file_share_test.cpp  cloud_file_test.cpp  cloud_page_blob_test.cpp  cloud_queue_client_test.cpp  cloud_queue_test.cpp  cloud_storage_account_test.cpp  cloud_table_client_test.cpp  cloud_table_test.cpp  executor_test.cpp  file_test_base.cpp  file_test_base.h  main.cpp  packages.config  queue_test_base.cpp  queue_test_base.h  (+17 more)
search/: all_0.js  (+97 more)
(+54 files in other folders)
